--- a/src/assets/design/scss/main.scss
+++ b/src/assets/design/scss/main.scss
@@ -1,1 +1,7 @@
-@import 'bootstrap'
+@import "bootstrap";
+
+.disableBtn {
+  color: #0000007A !important;
+  font-weight: 400 !important;
+  cursor: not-allowed !important;
+}
